Formatted source code using spotless.